--- a/index.html
+++ b/index.html
@@ -15,14 +15,37 @@
 
         <div id="storyBoard">
 
-            <div class="frame frame1 currentFrame">
+            <div class="frame frame1">
+                <div class="layer">
+                    <div class="background">
+                        <img src="img/startingBackground.png" alt=""/>
+                    </div>
+                </div>
+                <div class="layer">
+                    <div class="banner">
+                        <img src="img/startingBanner.png" alt=""/>
+                    </div>
+                </div>
                 <div class="layer">
                     <div class="btn playbutton"></div>
                 </div>
             </div>
 
-            <div class="frame frame2">
+            <div class="frame frame2 currentFrame">
                 <div class="layer">
+                    <div class="background">
+                        <img src="img/startingBackground.png" alt=""/>
+                    </div>
+                </div>
+                <div class="layer">
+                    <div class="characterbox_piggy">
+                        <div class="character_piggy"></div>
+                    </div>
+                </div>
+                <div class="layer">
+                    <div class="characterbox_pooh">
+                        <div class="character_pooh"></div>
+                    </div>
                 </div>
             </div>
 
