Starting background updated

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="frame frame1 currentFrame">
                 <div class="layer">
                     <div class="background">
-                        <img src="img/startingBackground.png" alt=""/>
+                        <img src="img/startingBackground.gif" alt=""/>
                     </div>
                 </div>
                 <div class="layer">
@@ -39,7 +39,7 @@
                 </div>
                 <div class="layer old_bg">
                     <div class="background oldbackground">
-                        <img src="img/startingBackground.png" alt=""/>
+                        <img src="img/startingBackground.gif" alt=""/>
                     </div>
                 </div>
                 <div class="layer pooh_char">
