character  and background replace

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="frame frame2">
                 <div class="layer new_bg">
                     <div class="background newbackground">
-                        <img src="img/stageBackground.png" alt=""/>
+                        <img src="img/stageBackground.gif" alt=""/>
                     </div>
                 </div>
                 <div class="layer old_bg">
@@ -61,7 +61,7 @@
             <div class="frame frame3">
                 <div class="layer new_bg">
                     <div class="background newbackground">
-                        <img src="img/stageBackground.png" alt=""/>
+                        <img src="img/stageBackground.gif" alt=""/>
                     </div>
                 </div>
                 <div class="layer voice_of_piggy">
@@ -93,7 +93,7 @@
             <div class="frame frame4">
                 <div class="layer new_bg">
                     <div class="background newbackground">
-                        <img src="img/stageBackground.png" alt=""/>
+                        <img src="img/stageBackground.gif" alt=""/>
                     </div>
                 </div>
                 <div class="layer pooh_char">
