--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <div id="storyBoard">
 
-            <div class="frame frame1 currentFrame">
+            <div class="frame frame1">
                 <div class="layer">
                     <div class="background">
                         <img src="img/startingBackground.gif" alt=""/>
@@ -119,8 +119,31 @@
                 </div>
             </div>
 
-            <div class="frame frame5">
-                <div class="layer">
+            <div class="frame frame5 currentFrame">
+                <div class="layer new_bg">
+                    <div class="background newbackground">
+                        <img src="img/stageBackground.gif" alt=""/>
+                    </div>
+                </div>
+                <div class="layer jar_of_lies">
+                    <div class="jar">
+                        <div class="jarbox">
+                            <img src="img/jar_of_lies.png" alt=""/>
+                        </div>
+                    </div>
+                </div>
+                <div class="layer elements">
+                    <div class="element_bar">
+                        <div class="each_element"></div>
+                        <div class="each_element"></div>
+                        <div class="each_element"></div>
+                        <div class="each_element"></div>
+                        <div class="each_element"></div>
+                        <div class="each_element"></div>
+                        <div class="each_element"></div>
+                        <div class="each_element"></div>
+                        <div class="each_element"></div>
+                    </div>
                 </div>
             </div>
 
