--- a/index.html
+++ b/index.html
@@ -133,16 +133,21 @@
                     </div>
                 </div>
                 <div class="layer elements">
+                    <div class="element_bar_display">&nbsp;</div>
+                </div>
+                <div class="layer elements">
                     <div class="element_bar">
-                        <div class="each_element"></div>
-                        <div class="each_element"></div>
-                        <div class="each_element"></div>
-                        <div class="each_element"></div>
-                        <div class="each_element"></div>
-                        <div class="each_element"></div>
-                        <div class="each_element"></div>
-                        <div class="each_element"></div>
-                        <div class="each_element"></div>
+                        <div class="bar">
+                            <div class="each_element"></div>
+                            <div class="each_element"></div>
+                            <div class="each_element"></div>
+                            <div class="each_element"></div>
+                            <div class="each_element"></div>
+                            <div class="each_element"></div>
+                            <div class="each_element"></div>
+                            <div class="each_element"></div>
+                            <div class="each_element"></div>
+                        </div>
                     </div>
                 </div>
             </div>
