dummy graphics deleted

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <div class="layer elements">
                     <div class="element_bar_display">&nbsp;</div>
                 </div>
-                <div class="layer elements">
+                <div class="layer orig_elements">
                     <div class="element_bar">
                         <div class="bar">
                             <div class="each_element"></div>
