--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <div id="storyBoard">
 
-            <div class="frame frame1 currentFrame">
+            <div class="frame frame1">
                 <div class="layer">
                     <div class="background">
                         <img src="img/startingBackground.gif" alt=""/>
@@ -218,11 +218,10 @@
                         <img src="img/stageBackground.gif" alt=""/>
                     </div>
                 </div>
-                <div class="layer stafflayer">
-                    <div class="staff">Stuff</div>
-                </div>
                 <div class="layer honeylayer">
-                    <div class="honey">&nbsp;&nbsp;Honey</div>
+                    <div class="honey">
+                        <img src="img/honeydripping.png" alt=""/>
+                    </div>
                 </div>
                 <div class="layer new_bg">
                     <div class="background newbackground">
@@ -236,12 +235,87 @@
                         </div>
                     </div>
                 </div>
+                <div class="layer stafflayer">
+                    <div class="staff">
+                        <div class="stuffdata">
+                            <div class="subbox restart">
+                                <div class="restart_btn"></div>
+                            </div>
+                            <div class="subbox credits">
+                                <h2>Credits:</h2>
+                                <hr/>
+                                <h3>Dãvid Ale</h3>
+                                <h3>Edita Gudan</h3>
+                                <h3>Tabitha Bjørkman</h3>
+                                <h3>Jaber Ibne Mahboob</h3>
+                                <h3>Cristina Hedegaad Neilsen</h3>
+                                <h3>Antonio Bosnjakovic</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="hiddenframe hiddenframe5">
+                <div class="layer new_bg">
+                    <div class="background newbackground">
+                        <img src="img/stageBackground.gif" alt=""/>
+                    </div>
+                </div>
+                <div class="layer jar_of_lies">
+                    <div class="jar">
+                        <div class="jarbox">
+                            <img src="img/jar_of_lies.png" alt=""/>
+                        </div>
+                    </div>
+                </div>
+                <div class="layer elements">
+                    <div class="element_bar_display">&nbsp;</div>
+                </div>
+                <div class="layer orig_elements">
+                    <div class="element_bar">
+                        <div class="bar">
+                            <div class="each_element dragdrop" draggable="true"></div>
+                            <div class="each_element eastereggs eastereggs1 frame5_show" draggable="true"></div>
+                            <div class="each_element dragdrop" draggable="true"></div>
+                            <div class="each_element dragdrop" draggable="true"></div>
+                            <div class="each_element eastereggs eastereggs2 frame5_hide" draggable="true"></div>
+                            <div class="each_element dragdrop" draggable="true"></div>
+                            <div class="each_element dragdrop" draggable="true"></div>
+                            <div class="each_element eastereggs eastereggs3 frame5_hide" draggable="true"></div>
+                            <div class="each_element dragdrop" draggable="true"></div>
+                        </div>
+                    </div>
+                    <div class="target_dropbox">
+                        <div class="dropbox"></div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="hiddenframe hiddenframe6">
+                <div class="layer new_bg">
+                    <div class="background newbackground">
+                        <img src="img/stageBackground.gif" alt=""/>
+                    </div>
+                </div>
+                <div class="layer jar_of_lies">
+                    <div class="jar">
+                        <div class="jarbox">
+                            <img src="img/jar_of_lies.png" alt=""/>
+                        </div>
+                    </div>
+                </div>
+                <div class="layer bomblayer">
+                    <div class="bomb_holder">
+                        <div class="bomb" draggable="true"></div>
+                    </div>
+                    <div class="target_dropbox">
+                        <div class="dropbox"></div>
+                    </div>
+                </div>
             </div>
 
         </div>
-
-        </div>
-
 
         <script type="text/javascript" src="js/js.js"></script>
     </body>
