few images replaced

--- a/index.html
+++ b/index.html
@@ -30,12 +30,7 @@
             <div class="frame frame1">
                 <div class="layer">
                     <div class="background">
-                        <img src="img/startingBackground.gif" alt=""/>
-                    </div>
-                </div>
-                <div class="layer">
-                    <div class="banner">
-                        <img src="img/startingBanner.png" alt=""/>
+                        <img src="img/startingBackground.jpg" alt=""/>
                     </div>
                 </div>
                 <div class="layer">
@@ -46,12 +41,12 @@
             <div class="frame frame2">
                 <div class="layer new_bg">
                     <div class="background newbackground">
-                        <img src="img/stageBackground.gif" alt=""/>
+                        <img src="img/stageBackground.jpg" alt=""/>
                     </div>
                 </div>
                 <div class="layer old_bg">
                     <div class="background oldbackground">
-                        <img src="img/startingBackground.gif" alt=""/>
+                        <img src="img/startingBackground.jpg" alt=""/>
                     </div>
                 </div>
                 <div class="layer pooh_char">
@@ -73,7 +68,7 @@
             <div class="frame frame3">
                 <div class="layer new_bg">
                     <div class="background newbackground">
-                        <img src="img/stageBackground.gif" alt=""/>
+                        <img src="img/stageBackground.jpg" alt=""/>
                     </div>
                 </div>
                 <div class="layer voice_of_piggy">
@@ -103,9 +98,14 @@
             </div>
 
             <div class="frame frame4">
+                <div class="layer bg">
+                    <div class="background jarbackground">
+                        <img src="img/jar_stageBackground.jpg" alt=""/>
+                    </div>
+                </div>
                 <div class="layer new_bg">
                     <div class="background newbackground">
-                        <img src="img/stageBackground.gif" alt=""/>
+                        <img src="img/stageBackground.jpg" alt=""/>
                     </div>
                 </div>
                 <div class="layer pooh_char">
@@ -131,69 +131,14 @@
                 </div>
             </div>
 
-            <div class="frame frame5">
-                <div class="layer new_bg">
-                    <div class="background newbackground">
-                        <img src="img/stageBackground.gif" alt=""/>
-                    </div>
-                </div>
-                <div class="layer jar_of_lies">
-                    <div class="jar">
-                        <div class="jarbox">
-                            <img src="img/jar_of_lies.png" alt=""/>
-                        </div>
-                    </div>
-                </div>
-                <div class="layer elements">
-                    <div class="element_bar_display">&nbsp;</div>
-                </div>
-                <div class="layer orig_elements">
-                    <div class="element_bar">
-                        <div class="bar">
-                            <div class="each_element dragdrop" draggable="true"></div>
-                            <div class="each_element eastereggs eastereggs1 frame5_show" draggable="true"></div>
-                            <div class="each_element dragdrop" draggable="true"></div>
-                            <div class="each_element dragdrop" draggable="true"></div>
-                            <div class="each_element eastereggs eastereggs2 frame5_hide" draggable="true"></div>
-                            <div class="each_element dragdrop" draggable="true"></div>
-                            <div class="each_element dragdrop" draggable="true"></div>
-                            <div class="each_element eastereggs eastereggs3 frame5_hide" draggable="true"></div>
-                            <div class="each_element dragdrop" draggable="true"></div>
-                        </div>
-                    </div>
-                    <div class="target_dropbox">
-                        <div class="dropbox"></div>
-                    </div>
-                </div>
-            </div>
+            <div class="frame frame5"></div>
 
-            <div class="frame frame6 ">
-                <div class="layer new_bg">
-                    <div class="background newbackground">
-                        <img src="img/stageBackground.gif" alt=""/>
-                    </div>
-                </div>
-                <div class="layer jar_of_lies">
-                    <div class="jar">
-                        <div class="jarbox">
-                            <img src="img/jar_of_lies.png" alt=""/>
-                        </div>
-                    </div>
-                </div>
-                <div class="layer bomblayer">
-                    <div class="bomb_holder">
-                        <div class="bomb" draggable="true"></div>
-                    </div>
-                    <div class="target_dropbox">
-                        <div class="dropbox"></div>
-                    </div>
-                </div>
-            </div>
+            <div class="frame frame6"></div>
 
             <div class="frame frame7">
                 <div class="layer new_bg">
                     <div class="background newbackground">
-                        <img src="img/stageBackground.gif" alt=""/>
+                        <img src="img/jar_stageBackground.jpg" alt=""/>
                     </div>
                 </div>
                 <div class="layer jar_of_lies">
@@ -215,7 +160,7 @@
             <div class="frame frame8">
                 <div class="layer stuff_bg">
                     <div class="background stuffbackground">
-                        <img src="img/stageBackground.gif" alt=""/>
+                        <img src="img/jar_stageBackground.jpg" alt=""/>
                     </div>
                 </div>
                 <div class="layer honeylayer">
@@ -225,7 +170,7 @@
                 </div>
                 <div class="layer new_bg">
                     <div class="background newbackground">
-                        <img src="img/stageBackground.gif" alt=""/>
+                        <img src="img/stageBackground.jpg" alt=""/>
                     </div>
                 </div>
                 <div class="layer boomlayer">
@@ -242,14 +187,7 @@
                                 <div class="restart_btn"></div>
                             </div>
                             <div class="subbox credits">
-                                <h2>Credits:</h2>
-                                <hr/>
-                                <h3>Dãvid Ale</h3>
-                                <h3>Edita Gudan</h3>
-                                <h3>Tabitha Bjørkman</h3>
-                                <h3>Jaber Ibne Mahboob</h3>
-                                <h3>Cristina Hedegaad Neilsen</h3>
-                                <h3>Antonio Bosnjakovic</h3>
+                                <img src="img/credits.png" alt=""/>
                             </div>
                         </div>
                     </div>
@@ -259,7 +197,7 @@
             <div class="hiddenframe hiddenframe5">
                 <div class="layer new_bg">
                     <div class="background newbackground">
-                        <img src="img/stageBackground.gif" alt=""/>
+                        <img src="img/jar_stageBackground.jpg" alt=""/>
                     </div>
                 </div>
                 <div class="layer jar_of_lies">
@@ -275,15 +213,15 @@
                 <div class="layer orig_elements">
                     <div class="element_bar">
                         <div class="bar">
-                            <div class="each_element dragdrop" draggable="true"></div>
-                            <div class="each_element eastereggs eastereggs1 frame5_show" draggable="true"></div>
-                            <div class="each_element dragdrop" draggable="true"></div>
-                            <div class="each_element dragdrop" draggable="true"></div>
-                            <div class="each_element eastereggs eastereggs2 frame5_hide" draggable="true"></div>
-                            <div class="each_element dragdrop" draggable="true"></div>
-                            <div class="each_element dragdrop" draggable="true"></div>
-                            <div class="each_element eastereggs eastereggs3 frame5_hide" draggable="true"></div>
-                            <div class="each_element dragdrop" draggable="true"></div>
+                            <div class="each_element dragdrop" draggable="true"><img src="img/elem/elem1.jpg" alt=""/></div>
+                            <div class="each_element eastereggs eastereggs1 frame5_show" draggable="true"><img src="img/elem/doll1.jpg" alt=""/></div>
+                            <div class="each_element dragdrop" draggable="true"><img src="img/elem/elem2.jpg" alt=""/></div>
+                            <div class="each_element dragdrop" draggable="true"><img src="img/elem/elem3.jpg" alt=""/></div>
+                            <div class="each_element eastereggs eastereggs2 frame5_hide" draggable="true"><img src="img/elem/doll2.jpg" alt=""/></div>
+                            <div class="each_element dragdrop" draggable="true"><img src="img/elem/elem4.jpg" alt=""/></div>
+                            <div class="each_element dragdrop" draggable="true"><img src="img/elem/elem5.jpg" alt=""/></div>
+                            <div class="each_element eastereggs eastereggs3 frame5_hide" draggable="true"><img src="img/elem/doll3.jpg" alt=""/></div>
+                            <div class="each_element dragdrop" draggable="true"><img src="img/elem/elem6.jpg" alt=""/></div>
                         </div>
                     </div>
                     <div class="target_dropbox">
@@ -295,7 +233,7 @@
             <div class="hiddenframe hiddenframe6">
                 <div class="layer new_bg">
                     <div class="background newbackground">
-                        <img src="img/stageBackground.gif" alt=""/>
+                        <img src="img/jar_stageBackground.jpg" alt=""/>
                     </div>
                 </div>
                 <div class="layer jar_of_lies">
