--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
 	       <source src="audio/boom.mp3">
         </audio>
 
+        <audio class="eastereggssound" preload="auto">
+	       <source src="audio/eastereggs.mp3">
+        </audio>
+
         <div id="storyBoard">
 
             <div class="frame frame1">
