--- a/index.html
+++ b/index.html
@@ -217,15 +217,15 @@
                 <div class="layer orig_elements">
                     <div class="element_bar">
                         <div class="bar">
-                            <div class="each_element dragdrop" draggable="true"><img src="img/elem/elem1.jpg" alt=""/></div>
-                            <div class="each_element eastereggs eastereggs1 frame5_show" draggable="true"><img src="img/elem/doll1.jpg" alt=""/></div>
-                            <div class="each_element dragdrop" draggable="true"><img src="img/elem/elem2.jpg" alt=""/></div>
-                            <div class="each_element dragdrop" draggable="true"><img src="img/elem/elem3.jpg" alt=""/></div>
-                            <div class="each_element eastereggs eastereggs2 frame5_hide" draggable="true"><img src="img/elem/doll2.jpg" alt=""/></div>
-                            <div class="each_element dragdrop" draggable="true"><img src="img/elem/elem4.jpg" alt=""/></div>
-                            <div class="each_element dragdrop" draggable="true"><img src="img/elem/elem5.jpg" alt=""/></div>
-                            <div class="each_element eastereggs eastereggs3 frame5_hide" draggable="true"><img src="img/elem/doll3.jpg" alt=""/></div>
-                            <div class="each_element dragdrop" draggable="true"><img src="img/elem/elem6.jpg" alt=""/></div>
+                            <div class="each_element dragdrop" draggable="true"><img src="img/elem/elem1.png" alt=""/></div>
+                            <div class="each_element eastereggs eastereggs1 frame5_show" draggable="true"><img src="img/elem/doll1.png" alt=""/></div>
+                            <div class="each_element dragdrop" draggable="true"><img src="img/elem/elem2.png" alt=""/></div>
+                            <div class="each_element dragdrop" draggable="true"><img src="img/elem/elem3.png" alt=""/></div>
+                            <div class="each_element eastereggs eastereggs2 frame5_hide" draggable="true"><img src="img/elem/doll2.png" alt=""/></div>
+                            <div class="each_element dragdrop" draggable="true"><img src="img/elem/elem4.png" alt=""/></div>
+                            <div class="each_element dragdrop" draggable="true"><img src="img/elem/elem5.png" alt=""/></div>
+                            <div class="each_element eastereggs eastereggs3 frame5_hide" draggable="true"><img src="img/elem/doll3.png" alt=""/></div>
+                            <div class="each_element dragdrop" draggable="true"><img src="img/elem/elem6.png" alt=""/></div>
                         </div>
                     </div>
                     <div class="target_dropbox">
