--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                 </div>
                 <div class="layer bomblayer">
                     <div class="bomb_holder">
-                        <div class="bomb" draggable="true"></div>
+                        <img src="img/grenade.png" class="bomb" draggable="true"/>
                     </div>
                     <div class="target_dropbox">
                         <div class="dropbox"></div>
