--- a/index.html
+++ b/index.html
@@ -26,7 +26,15 @@
         </audio>
 
         <audio class="eastereggssound" preload="auto">
-	       <source src="audio/eastereggs.mp3">
+	       <source src="audio/eastereggs1.mp3">
+        </audio>
+
+        <audio class="eastereggssound2" preload="auto">
+	       <source src="audio/eastereggs2.mp3">
+        </audio>
+
+        <audio class="eastereggssound3" preload="auto">
+	       <source src="audio/eastereggs3.mp3">
         </audio>
 
         <div id="storyBoard">
